# j-llm-d

./: .gitignore  .gitmodules  CLAUDE.md  Justfile  Justfile.glm-remote  Justfile.remote  README.md  annotate.sh  collect-results.sh  corpus-prep-job.yaml  glm-collect.py  guidellm-job.yaml  inference-perf-job.yaml  multiturn-routing-sweep.sh  no_question_responses.txt  par-guidellm.yaml  parallel-guidellm.yaml  poker.yaml  port_forward.sh  prefill-tuning-sweep.sh  profile.sh  pyproject.toml  repro_stop_in_reasoning.py  retry_doc43.py  sweep-runner.yaml  sweep.py  sweep.sh  telemetry.yaml  trigger_profiling.py  ucx-ucp-get-analysis.md  vllm-fix-stop-in-reasoning.patch  workload-sweep.sh
clusters/: oci-gb200-osaka.yaml  oci-gb200.yaml
configs/: deepseek-r1-gb200-agg.yaml  deepseek-r1-gb200-decode-bench.yaml  deepseek-r1-gb200-pd.yaml  qwen-gb200-agg.yaml
dev/: Containerfile  Containerfile.deepep-v2  dev-gpu-pod.yaml  dev-pod.yaml
gb200/: gateway.yaml  httproute.yaml  image-preload-ds.yaml  inferencepool-agg-random.values.yaml  inferencepool-agg.values.yaml  inferencepool-load-aware.values.yaml  inferencepool-pd-kvcache-decode.values.yaml  (+6 more)
gb200-fp4-decode-bench/: cleanup.sh  decode-bench.yaml  deploy.sh  gateway.yaml  httproute.yaml  inferencepool-load-aware.values.yaml  inferencepool-random.values.yaml  jit_mla_absorption_bmm.py  jit_mla_rope_quant.py  kustomization.yaml
gb200-pure-decode/: decode-bench.yaml  gateway.yaml  httproute.yaml  inferencepool-load-aware.values.yaml  inferencepool-random.values.yaml  inferencepool.values.yaml  serviceAccount.yaml
(+958 files in other folders)
